--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,30 @@
+language: php
+
+php:
+- 5.6
+- 7.0
+
+jobs:
+  include:
+  - php: 7.0
+    env: KEY=VALUE
+  allow_failures:
+  - php: 7.0
+    env: KEY=VALUE
+
 dist: bionic
+
 addons:
   apt:
     packages:
     - sshpass
+  addons:
+    ssh_known_hosts: mars.cs.qc.cuny.edu
+
 before_deploy:
+- eval "$(ssh-agent -s)"
+
+deploy:
   provider: script
   skip_cleanup: true
   script: bash deploy.sh
